Transfer color space in canvas capture

Bug: 912277
Change-Id: I60698b91351a4788162d0bfa4ab160bebf518a73
Reviewed-on: https://chromium-review.googlesource.com/c/1372564
Reviewed-by: Christian Fremerey <chfremer@chromium.org>
Reviewed-by: Emircan Uysaler <emircan@chromium.org>
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#628847}
Former-commit-id: 5867385e991ade98c8a4f98f48bca571ad4ca056