content/renderer/media_capture_from_element/canvas_capture_handler.cc
@@ -27,6 +27,7 @@
 #include "third_party/libyuv/include/libyuv.h"
 #include "third_party/skia/include/core/SkImage.h"
 #include "third_party/skia/include/gpu/GrBackendSurface.h"
+#include "ui/gfx/color_space.h"
 
 using media::VideoFrame;
 
@@ -175,7 +176,7 @@ void CanvasCaptureHandler::SendNewFrame(
                                 static_cast<const uint8_t*>(pixmap.addr(0, 0)),
                                 gfx::Size(pixmap.width(), pixmap.height()),
                                 pixmap.rowBytes(), pixmap.colorType()),
-              timestamp);
+              timestamp, image->refColorSpace());
     return;
   }
 
@@ -268,7 +269,7 @@ void CanvasCaptureHandler::ReadARGBPixelsSync(sk_sp<SkImage> image) {
           is_opaque, false /* flip */,
           temp_argb_frame->visible_data(VideoFrame::kARGBPlane), image_size,
           temp_argb_frame->stride(VideoFrame::kARGBPlane), kN32_SkColorType),
-      timestamp);
+      timestamp, image->refColorSpace());
 }
 
 void CanvasCaptureHandler::ReadARGBPixelsAsync(
@@ -360,6 +361,7 @@ void CanvasCaptureHandler::OnARGBPixelsReadAsync(
   }
   // Let |image| fall out of scope after we are done reading.
   const bool is_opaque = image->isOpaque();
+  const auto color_space = image->refColorSpace();
   image = nullptr;
 
   SendFrame(
@@ -368,11 +370,11 @@ void CanvasCaptureHandler::OnARGBPixelsReadAsync(
                         temp_argb_frame->visible_rect().size(),
                         temp_argb_frame->stride(VideoFrame::kARGBPlane),
                         kN32_SkColorType),
-      this_frame_ticks);
+      this_frame_ticks, color_space);
 }
 
 void CanvasCaptureHandler::OnYUVPixelsReadAsync(
-    sk_sp<SkImage> /* image */,
+    sk_sp<SkImage> image,
     scoped_refptr<media::VideoFrame> yuv_frame,
     base::TimeTicks this_frame_ticks,
     bool success) {
@@ -381,7 +383,7 @@ void CanvasCaptureHandler::OnYUVPixelsReadAsync(
     DLOG(ERROR) << "Couldn't read SkImage using async callback";
     return;
   }
-  SendFrame(yuv_frame, this_frame_ticks);
+  SendFrame(yuv_frame, this_frame_ticks, image->refColorSpace());
 }
 
 scoped_refptr<media::VideoFrame> CanvasCaptureHandler::ConvertToYUVFrame(
@@ -444,7 +446,8 @@ scoped_refptr<media::VideoFrame> CanvasCaptureHandler::ConvertToYUVFrame(
 }
 
 void CanvasCaptureHandler::SendFrame(scoped_refptr<VideoFrame> video_frame,
-                                     base::TimeTicks this_frame_ticks) {
+                                     base::TimeTicks this_frame_ticks,
+                                     sk_sp<SkColorSpace> color_space) {
   DCHECK(main_render_thread_checker_.CalledOnValidThread());
 
   // If this function is called asynchronously, |delegate_| might have been
@@ -455,6 +458,8 @@ void CanvasCaptureHandler::SendFrame(scoped_refptr<VideoFrame> video_frame,
   if (!first_frame_ticks_)
     first_frame_ticks_ = this_frame_ticks;
   video_frame->set_timestamp(this_frame_ticks - *first_frame_ticks_);
+  if (color_space)
+    video_frame->set_color_space(gfx::ColorSpace(*color_space));
 
   last_frame_ = video_frame;
   io_task_runner_->PostTask(
