content/renderer/media_capture_from_element/canvas_capture_handler.h
@@ -100,7 +100,8 @@ class CONTENT_EXPORT CanvasCaptureHandler final
       int stride,
       SkColorType source_color_type);
   void SendFrame(scoped_refptr<media::VideoFrame> video_frame,
-                 base::TimeTicks this_frame_ticks);
+                 base::TimeTicks this_frame_ticks,
+                 sk_sp<SkColorSpace> color_space);
 
   void AddVideoCapturerSourceToVideoTrack(
       std::unique_ptr<media::VideoCapturerSource> source,
